# SISC-F

./: .gitignore  README.md  file_header.md  litex_builder.py  main.py  pyproject.toml  requirements.txt
litex_include/: driver.py
src/: main.py
src/include/: enums.py  exceptions.py  instruction.py  wishbone.py
src/instructions/: ADDI.py  ADDI_ABS.py  CJMP.py  DECI.py  FLAGS.py  HALT.py  INCI.py  JIZ.py  JMP.py  JNZ.py  LDI.py  LDI_ABS.py  MOV.py  NOP.py  POP.py  POPI.py  PUSH.py  PUSHI.py  PUSH_ABS.py  RET.py  STI.py  SUBI.py  SUBI_ABS.py  VISIT.py  __init__.py
src/pseudo_instructions/: __init__.py
